Fix font and spacing issues

--- a/optashift-employee-rostering-gwtui/src/main/resources/org/optaplanner/openshift/employeerostering/gwtui/public/viewport.less
+++ b/optashift-employee-rostering-gwtui/src/main/resources/org/optaplanner/openshift/employeerostering/gwtui/public/viewport.less
@@ -37,6 +37,7 @@
     display: inline;
     position: sticky;
     left: 0;
+    padding-left: 10px;
     background-color: white;
     border: 1px solid black;
     border-top: none;
